[build-system]
requires = ["hatchling >=1.11"]
build-backend = "hatchling.build"

[project]
name = "zasper_py"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
description  = "Zasper backend"
authors = [{name = "Prasun Anand"}]
keywords = ["zasper"]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "tornado>=6.2.0",
    "pyzmq>=24",
    "terminado>=0.8.3"
]

[project.scripts]
zasper_py = "zasper_py.app:main"
zasper-kernelspec = "zasper_py.kernelSpecApp:main"

[project.entry-points."zasper_py.kernel_provisioners"]
local-provisioner = "zasper_py.services.provisioner:LocalProvisioner"


[tool.hatch.version]
path = "zasper_py/_version.py"
validate-bump = false